force-app/main/default/objects/MyInvoice__c/MyInvoice__c.object-meta.xml
<CustomObject>
    <label>MyInvoice</label>
    <nameField>
        <displayFormat>MyInvoice-{0}</displayFormat>
        <label>MyInvoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MyInvoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>