force-app/main/default/objects/MyInvoice__c/fields/InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmount__c</fullName>
    <label>InvoiceAmount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>