force-app/main/default/objects/MyInvoice__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <label>InvoiceDate</label>
    <type>Date</type>
</CustomField>