force-app/main/default/objects/MyInvoice__c/fields/MyCustomer__c.field-meta.xml
<CustomField>
    <fullName>MyCustomer__c</fullName>
    <label>MyCustomer</label>
    <referenceTo>MyCustomer__c</referenceTo>
    <relationshipLabel>MyInvoices</relationshipLabel>
    <relationshipName>MyInvoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>