force-app/main/default/objects/MyInvoice__c/fields/MyCustomer_invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>MyCustomer_invoice_Email__c</fullName>
    <label>MyCustomer_invoice_Email</label>
    <type>Email</type>
</CustomField>