force-app/main/default/objects/MyInvoice__c/fields/MyOrder__c.field-meta.xml
<CustomField>
    <fullName>MyOrder__c</fullName>
    <label>MyOrder</label>
    <referenceTo>MyOrder__c</referenceTo>
    <relationshipLabel>MyInvoices</relationshipLabel>
    <relationshipName>MyInvoices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>