force-app/main/default/objects/MyInvoice__c/validationRules/InvoiceAmount_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceAmount_rules</fullName>
    <active>true</active>
    <errorConditionFormula>InvoiceAmount__c  &gt;  MyOrder__r.OrderAmount__c</errorConditionFormula>
    <errorDisplayField>InvoiceAmount__c</errorDisplayField>
    <errorMessage>Invoice Amount should not be exceeded by Related Order&apos;s Order Amount.</errorMessage>
</ValidationRule>