force-app/main/default/objects/MyInvoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MyCustomer__c</columns>
    <columns>MyOrder__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>MyCustomer_invoice_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>